Refactored HUD overflow issues

--- a/Client/scss/tabletop.scss
+++ b/Client/scss/tabletop.scss
@@ -143,7 +143,8 @@
 
         .creature-hud {
             position: absolute;
-            bottom: 100%;
+            top: 0;
+            left: 0;
             width: 300px;
             border-radius: 0.25rem;
             background-color: var(--white);
@@ -153,19 +154,6 @@
             transition: all 0ms linear;
             z-index: 101;
 
-            &::before {
-                z-index: -1;
-                content: "";
-                display: inline-block;
-                width: 10px;
-                height: 10px;
-                position: absolute;
-                left: 50%;
-                bottom: 0;
-                transform: translate(-50%, 5px) rotate(45deg);
-                background-color: var(--white);
-                box-shadow: var(--shadow-md);
-            }
             &::after {
                 content: "";
                 position: absolute;
@@ -173,6 +161,22 @@
                 top: 100%;
                 height: 0.75rem;
                 width: 100%;
+            }
+
+            &[data-view="1"]{
+                [data-view="1"]{
+                    display: block;
+                }
+            }
+            &[data-view="2"]{
+                [data-view="2"]{
+                    display: block;
+                }
+            }
+            &[data-view="3"]{
+                [data-view="3"]{
+                    display: block;
+                }
             }
 
             header {
@@ -250,6 +254,12 @@
                     }
                 }
             }
+
+            [data-view]{
+                display: none;
+            }
+
+            
 
             .creature-input {
                 position: relative;
